<resources>
    <string name="app_name">FYP Dead Reckoning</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_settings">Settings</string>
    <string name="title_debug">Debug</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="stop">Stop</string>
    <string name="zero">0</string>
    <string name="begin">Begin</string>
    <string name="instructions_header">Instructions</string>
    <string name="dash">--</string>

</resources>