<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fypdeadreckoning.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_instructions"
        android:name="com.example.fypdeadreckoning.ui.instructions.InstructionsFragment"
        android:label="@string/title_instructions"
        tools:layout="@layout/fragment_instructions" />

    <fragment
        android:id="@+id/navigation_debug"
        android:name="com.example.fypdeadreckoning.ui.debug.DebugFragment"
        android:label="@string/title_debug"
        tools:layout="@layout/fragment_debug" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.fypdeadreckoning.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>