<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/strideLayout">

        <TextView
            android:id="@+id/stepCountHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Step count:"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textCalibrateSteps"/>

        <TextView
            android:id="@+id/textCalibrateSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/zero"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/stepCountHeader"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/userInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Enter distance travelled"
            android:textSize="20sp"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@id/textCalibrateSteps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/userInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/startButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/inputDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:text=""
            android:hint="Metres walked"
            android:textSize="35sp"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@id/stopButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/setStrideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set stride length"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/inputDistance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/linearAcceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Linear Acceleration"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/setStrideButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/calibrateLinearAcceleration"/>

        <TextView
            android:id="@+id/calibrateLinearAcceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/setStrideButton"
            app:layout_constraintStart_toEndOf="@id/linearAcceleration"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>